syntax = "proto3";

package xai.v1;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

// Image service for image generation
service Images {
  // Generate an image from a text prompt
  rpc GenerateImage(GenerateImageRequest) returns (GenerateImageResponse);
}

// Image generation request
message GenerateImageRequest {
  string prompt = 1;
  string model = 2;
  string size = 3; // "1024x1024", "512x512", etc.
  string quality = 4; // "standard", "hd"
  string style = 5; // "vivid", "natural"
  int32 n = 6; // Number of images to generate (default 1)
}

// Image generation response
message GenerateImageResponse {
  repeated Image images = 1;
}

// Generated image
message Image {
  string url = 1; // URL to the generated image
  bytes data = 2; // Raw image data (optional)
  string revised_prompt = 3; // Revised prompt used for generation
}